--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,10 @@
   --potrfolio-border-color: #eeeeee;
   --header-border-color: #ececec;
 }
-/* тимчасова візуалізація */
+/* тимчасова візуалізація  */
 /* * {
   outline: 1px solid blue;
-} */
+}
 header .container {
   background: rgb(49, 145, 73);
 }
@@ -39,6 +39,9 @@ header .container {
 .footer .container {
   background: rgb(216, 136, 45);
 }
+.portfolio .container {
+  background: rgb(45, 216, 96);
+} */
 
 /* General properties */
 
@@ -65,6 +68,12 @@ ul {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .link {
@@ -95,6 +104,10 @@ ul {
   color: var(--black-logo-color);
 }
 
+.navigation .logo {
+  margin-right: 93px;
+}
+
 .web-logo {
   color: var(--accent-color);
 }
@@ -104,6 +117,19 @@ ul {
 }
 
 /* Навігація сайту */
+
+header .container {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid var(--header-border-color);
+}
+
+.header-content,
+.navigation,
+.navigation-list {
+  display: flex;
+  align-items: center;
+}
 
 .navigation-list .link.current {
   color: var(--accent-color);
@@ -116,6 +142,18 @@ ul {
 .navigation-list .link:hover,
 .navigation-list .link:focus {
   color: var(--accent-color);
+}
+
+.navigation-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-content .email {
+  margin-right: 50px;
+}
+
+.header-content {
+  justify-content: space-between;
 }
 
 .navigation-item {
@@ -146,8 +184,19 @@ ul {
   color: var(--address-contacts-color);
 }
 
+.footer .container,
+.address {
+  display: flex;
+  flex-direction: column;
+}
+
 .address p {
+  margin-bottom: 9px;
   color: var(--white-text-color);
+}
+
+.address .email {
+  margin-bottom: 9px;
 }
 
 .email:hover,
@@ -155,6 +204,15 @@ ul {
 .email:focus,
 .telnumber:focus {
   color: var(--accent-color);
+}
+
+.footer .logo {
+  margin-bottom: 20px;
+}
+
+.footer .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer {
@@ -198,11 +256,16 @@ ul {
 
 /* Наші особливості */
 
-.features .container {
-  padding: 94px 215px;
+.features-list {
+  display: flex;
+}
+
+.features.section {
+  padding-bottom: 0px;
 }
 
 .features-title {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
@@ -210,7 +273,16 @@ ul {
   color: var(--secondary-text-color);
 }
 
+.features-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.features-item {
+  width: 270px;
+}
+
 .features-item p {
+  padding-bottom: 3px;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
@@ -220,6 +292,7 @@ ul {
 
 .employment-title,
 .team-title {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.167;
   text-align: center;
@@ -227,11 +300,35 @@ ul {
   color: var(--secondary-text-color);
 }
 
+.employment-item,
+.employment-list,
+.team-list {
+  display: flex;
+}
+
+.employment-item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .team {
   background: var(--secondary-background-color);
 }
 
+.team-item:not(:last-child) {
+  margin-right: 30px;
+}
+.team-item img {
+  margin-bottom: 30px;
+}
+.team-item {
+  padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .team-member {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -248,8 +345,22 @@ ul {
 }
 
 /* Портфоліо */
+/*  */
+.filter-list {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  width: 612px;
+  padding-bottom: 16px;
+  margin-bottom: 34px;
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
 
 .filter-button {
+  padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
@@ -257,12 +368,15 @@ ul {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   background: var(--secondary-background-color);
+  border-radius: 4px;
 }
 
 .filter-button:hover,
 .filter-button:focus {
   color: var(--white-text-color);
   background: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-title {
@@ -272,9 +386,31 @@ ul {
   color: var(--primery-text-color);
 }
 
-.project-title {
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  flex-basis: calc((100% - 60px) / 3);
+  align-content: flex-start;
+}
+
+.portfolio-title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
   color: var(--secondary-text-color);
+}
+/*  */
+.portfolio-item {
+  background: var(--white-text-color);
+  border-bottom: 1px solid var(--potrfolio-border-color);
+}
+
+.portfolio-item div {
+  padding: 20px 24px;
+}
+/* ===== Костилі ===== */
+.portfolio-item img {
+  display: flex;
 }
