--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,10 @@ img {
 }
 
 .hero-title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 696px;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
